# forecasty

./: .env  .gitignore  README.md  compose.yaml
backend/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
backend/forecasty/: __init__.py  api.py  cache.py  routes.py  wsgi.py
bot/: Dockerfile  pyproject.toml
bot/forecasty-bot/: bot.py
frontend/: Dockerfile  README.md  package.json
frontend-dash/: .dockerignore  Dockerfile  pyproject.toml
frontend-dash/forecasty/: app.py
frontend-dash/forecasty/assets/: app.css  scripts.js  styles.css
frontend-solid/src/: app.tsx
frontend/forecasty/: app.py
frontend/forecasty/assets/: styles.css
frontend/src/: app.css
frontend/src/routes/: index.tsx
